# datafix_maya

./: pyproject.toml  pytest.ini
datafix/nodes/maya/actions/: select_node.py
datafix/nodes/maya/collectors/: long_name.py  mesh_long_name.py
datafix/nodes/maya/validators/: frozen_transforms.py  history.py  no_ngons.py  zero_transforms.py
datafix/nodes/maya_pymel/actions/: select_pynode.py
datafix/nodes/maya_pymel/collectors/: pynodes.py
datafix/nodes/maya_pymel/validators/: no_ngons.py
datafix/sample_sessions/: meshes.py  pymel_demo.py
datafix/tests/: manual_test.py
datafix/tests/collectors/: my_collector.py
datafix/tests/validators/: my_validator.py
datafix_maya/: __init__.py  types.py
datafix_maya/nodes/: adapters.py  collectors.pyi
datafix_maya/nodes/actions/: select_node.py
datafix_maya/nodes/collectors/: __init__.py  custom.py  standard.py  standard.pyi
datafix_maya/nodes/pymel/collectors/: pynodes.py
datafix_maya/nodes/pymel/validators/: no_ngons.py
datafix_maya/nodes/validators/: ensure_mesh.py  frozen_transforms.py  history.py  ngons.py  zero_transforms.py
datafix_maya/sample_sessions/: meshes.py  pymel_demo.py
datafix_maya/tests/: manual_test.py
datafix_maya/types/: __init__.py  custom.py  standard.py
stubs/: generate.py
stubs/generate/: collector_stubs.py  material_types.py
tests/: manual_test.py
tests/nodes/collectors/: test_standard.py
tests/types/: test_standard.py
