[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "datafix_maya"
authors = [
    {name = "Hannes"},
]
description = "nodes for datafix"
readme = "README.md"
requires-python = ">=3.4"
keywords = ["node", "validation"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
]
#dynamic = ["dependencies"]
dependencies = ['importlib-metadata; python_version<"3.7"', 'datafix']
#dynamic = ["version"]
version = "0.0.1"

[project.urls]
# Homepage = "https://github.com/datafix/datafix"
# Source = "https://github.com/datafix/datafix"

